--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/e.png" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
-
+    <link rel="stylesheet" href="/my-portfolio/style.css" /> 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
     
